-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 10
-
Component/s: hotspot
-
b36
-
Verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8193751 | 11 | Dean Long | P2 | Resolved | Fixed | team |
compiler/c2/Test7029152.java crashes with
# A fatal error has been detected by the Java Runtime Environment:
#
# SIGILL (0x4) at pc=0x00007f3e2b30e4cd, pid=24074, tid=24141
#
# JRE version: Java(TM) SE Runtime Environment (10.0) (fastdebug build 10-internal+0-2017-12-04-1723467.katya.hs10.consolidated)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 10-internal+0-2017-12-04-1723467.katya.hs10.consolidated, mixed mode, tiered, jvmci, jvmci compiler, compressed oops, g1 gc, linux-amd64)
# Problematic frame:
# J 626 jvmci java.lang.StringLatin1.indexOf([BI[BII)I java.base@10-internal (121 bytes) @ 0x00007f3e2b30e4cd [0x00007f3e2b30e340+0x000000000000018d] (java.lang.StringLatin1.indexOf(byte[], int, byte[], int, int))
Current thread (0x00007f3e4077e000): JavaThread "MainThread" [_thread_in_Java, id=24141, stack(0x00007f3d61904000,0x00007f3d61a05000)]
Stack: [0x00007f3d61904000,0x00007f3d61a05000], sp=0x00007f3d61a02fd0, free space=1019k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
J 626 jvmci java.lang.StringLatin1.indexOf([BI[BII)I java.base@10-internal (121 bytes) @ 0x00007f3e2b30e4cd [0x00007f3e2b30e340+0x000000000000018d] (java.lang.StringLatin1.indexOf(byte[], int, byte[], int, int))
J 624 c1 java.lang.String.indexOf(Ljava/lang/String;)I java.base@10-internal (65 bytes) @ 0x00007f3e21535384 [0x00007f3e21534f20+0x0000000000000464]
J 625 c1 compiler.c2.Test7029152.IndexOfTest(Ljava/lang/String;)I (7 bytes) @ 0x00007f3e2153695c [0x00007f3e21536900+0x000000000000005c]
j compiler.c2.Test7029152.main([Ljava/lang/String;)V+10
v ~StubRoutines::call_stub
V [libjvm.so+0xef835e] JavaCalls::call_helper(JavaValue*, methodHandle const&, JavaCallArguments*, Thread*)+0x7ce
V [libjvm.so+0x15e167a] invoke(InstanceKlass*, methodHandle const&, Handle, bool, objArrayHandle, BasicType, objArrayHandle, bool, Thread*)+0xc0a
V [libjvm.so+0x15e630c] Reflection::invoke_method(oop, Handle, objArrayHandle, Thread*)+0x1bc
V [libjvm.so+0x106dc43] JVM_InvokeMethod+0x213
j jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Ljava/lang/reflect/Method;Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+0 java.base@10-internal
j jdk.internal.reflect.NativeMethodAccessorImpl.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+100 java.base@10-internal
J 491 c1 jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object; java.base@10-internal (10 bytes) @ 0x00007f3e214f4084 [0x00007f3e214f3da0+0x00000000000002e4]
J 490 c1 java.lang.reflect.Method.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object; java.base@10-internal (65 bytes) @ 0x00007f3e214f3614 [0x00007f3e214f3080+0x0000000000000594]
j com.sun.javatest.regtest.agent.MainWrapper$MainThread.run()V+172
j java.lang.Thread.run()V+11 java.base@10-internal
v ~StubRoutines::call_stub
V [libjvm.so+0xef835e] JavaCalls::call_helper(JavaValue*, methodHandle const&, JavaCallArguments*, Thread*)+0x7ce
V [libjvm.so+0xef53ef] JavaCalls::call_virtual(JavaValue*, Klass*, Symbol*, Symbol*, JavaCallArguments*, Thread*)+0x41f
V [libjvm.so+0xef5642] JavaCalls::call_virtual(JavaValue*, Handle, Klass*, Symbol*, Symbol*, Thread*)+0xa2
V [libjvm.so+0x1048993] thread_entry(JavaThread*, Thread*)+0xa3
V [libjvm.so+0x178629a] JavaThread::thread_main_inner()+0x21a
V [libjvm.so+0x17864da] JavaThread::run()+0x17a
V [libjvm.so+0x14bad4a] thread_native_entry(Thread*)+0xfa
C [libpthread.so.0+0x76ba] start_thread+0xca
# A fatal error has been detected by the Java Runtime Environment:
#
# SIGILL (0x4) at pc=0x00007f3e2b30e4cd, pid=24074, tid=24141
#
# JRE version: Java(TM) SE Runtime Environment (10.0) (fastdebug build 10-internal+0-2017-12-04-1723467.katya.hs10.consolidated)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 10-internal+0-2017-12-04-1723467.katya.hs10.consolidated, mixed mode, tiered, jvmci, jvmci compiler, compressed oops, g1 gc, linux-amd64)
# Problematic frame:
# J 626 jvmci java.lang.StringLatin1.indexOf([BI[BII)I java.base@10-internal (121 bytes) @ 0x00007f3e2b30e4cd [0x00007f3e2b30e340+0x000000000000018d] (java.lang.StringLatin1.indexOf(byte[], int, byte[], int, int))
Current thread (0x00007f3e4077e000): JavaThread "MainThread" [_thread_in_Java, id=24141, stack(0x00007f3d61904000,0x00007f3d61a05000)]
Stack: [0x00007f3d61904000,0x00007f3d61a05000], sp=0x00007f3d61a02fd0, free space=1019k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
J 626 jvmci java.lang.StringLatin1.indexOf([BI[BII)I java.base@10-internal (121 bytes) @ 0x00007f3e2b30e4cd [0x00007f3e2b30e340+0x000000000000018d] (java.lang.StringLatin1.indexOf(byte[], int, byte[], int, int))
J 624 c1 java.lang.String.indexOf(Ljava/lang/String;)I java.base@10-internal (65 bytes) @ 0x00007f3e21535384 [0x00007f3e21534f20+0x0000000000000464]
J 625 c1 compiler.c2.Test7029152.IndexOfTest(Ljava/lang/String;)I (7 bytes) @ 0x00007f3e2153695c [0x00007f3e21536900+0x000000000000005c]
j compiler.c2.Test7029152.main([Ljava/lang/String;)V+10
v ~StubRoutines::call_stub
V [libjvm.so+0xef835e] JavaCalls::call_helper(JavaValue*, methodHandle const&, JavaCallArguments*, Thread*)+0x7ce
V [libjvm.so+0x15e167a] invoke(InstanceKlass*, methodHandle const&, Handle, bool, objArrayHandle, BasicType, objArrayHandle, bool, Thread*)+0xc0a
V [libjvm.so+0x15e630c] Reflection::invoke_method(oop, Handle, objArrayHandle, Thread*)+0x1bc
V [libjvm.so+0x106dc43] JVM_InvokeMethod+0x213
j jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Ljava/lang/reflect/Method;Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+0 java.base@10-internal
j jdk.internal.reflect.NativeMethodAccessorImpl.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+100 java.base@10-internal
J 491 c1 jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object; java.base@10-internal (10 bytes) @ 0x00007f3e214f4084 [0x00007f3e214f3da0+0x00000000000002e4]
J 490 c1 java.lang.reflect.Method.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object; java.base@10-internal (65 bytes) @ 0x00007f3e214f3614 [0x00007f3e214f3080+0x0000000000000594]
j com.sun.javatest.regtest.agent.MainWrapper$MainThread.run()V+172
j java.lang.Thread.run()V+11 java.base@10-internal
v ~StubRoutines::call_stub
V [libjvm.so+0xef835e] JavaCalls::call_helper(JavaValue*, methodHandle const&, JavaCallArguments*, Thread*)+0x7ce
V [libjvm.so+0xef53ef] JavaCalls::call_virtual(JavaValue*, Klass*, Symbol*, Symbol*, JavaCallArguments*, Thread*)+0x41f
V [libjvm.so+0xef5642] JavaCalls::call_virtual(JavaValue*, Handle, Klass*, Symbol*, Symbol*, Thread*)+0xa2
V [libjvm.so+0x1048993] thread_entry(JavaThread*, Thread*)+0xa3
V [libjvm.so+0x178629a] JavaThread::thread_main_inner()+0x21a
V [libjvm.so+0x17864da] JavaThread::run()+0x17a
V [libjvm.so+0x14bad4a] thread_native_entry(Thread*)+0xfa
C [libpthread.so.0+0x76ba] start_thread+0xca
- backported by
-
JDK-8193751 compiler/c2/Test7029152.java crashes with SIGILL in java.lang.StringLatin1.indexOf with -XX:+UseJVMCICompiler
-
- Resolved
-
- blocks
-
JDK-8193163 better TLS poll for x64 C1
-
- Closed
-
- duplicates
-
JDK-8193095 Crash in AOT'ed BinaryToASCIIBuffer.dtoa
-
- Closed
-